# pro6-dashboard

./: .env.example  .envrc  .gitignore  .onedev-buildspec.yml  Dockerfile  agenda.md  date-swaps.example.json  docker-entrypoint.sh  import.sh  pro2json.py  pro6pl2json.py  readme.md
example-real-world-data/: Default.pro6pl
example-real-world-data/ProPresenter6/: Song 1.pro6  Song 2.pro6
pro2json/: docker-compose.yml  pro2json.py  requirements.txt
real-world-data/: songs.tgz
sync_service/: readme.md  setup.cfg
sync_service/pro6_dashboard_sync/: example.config.toml  lib.py  pro6_service_enable.py  service.py  sync.py
web/: .gitignore  fmt.sh  index.html  jsconfig.json  package-lock.json  package.json  postcss.config.js  readme.md  tailwind.config.js  vite.config.js
web/data/: playlists.json  songs.json
web/src/: App.vue  index.css  main.js  utils.js
web/src/components/: BackButton.vue  FindSong.vue  History.vue  HistoryLink.vue  Index.vue  InlineHistoryLink.vue  ListAll.vue  Menu.vue  NavLink.vue  NumInput.vue  OldSongs.vue  Randomize.vue  Song.vue  SongDetail.vue  SongFullScreen.vue  SongLink.vue  SongLinkContainer.vue  Stats.vue  Sunday.vue  WeirdSongCard.vue
