[metadata]
name = pro6db-dashboard
version = 0.1.0

[options]
packages = find:
python_requires = >=3.8
install_requires =
    boto3==1.34.11
    striprtf==0.0.22
    toml==0.10.2

[options.entry_points]
console_scripts =
    pro6-dashboard-sync = pro6_dashboard_sync.__main__:main
    pro6-enable-service = pro6_dashboard_sync.pro6_service_enable:main